--- a/map_with_button.html
+++ b/map_with_button.html
@@ -1,4 +1,3 @@
-<!-- map_with_button.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,15 +43,17 @@
     mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lcyIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
 
     const defaultCenter = [-71.245, 42.254],
-          defaultZoom   = 7.5,
+          defaultZoom   = 8,
           vectorLayerId = 'municipalitiesbycommunitytype-c8ks3h copy',
           tileField     = 'Municipali',
           geojsonField  = 'Municipality',
           bounds        = [[-72.5,41.5],[-69.5,43.0]],
           geojsonURL    = './MunicipalitiesByCommunityType.geojson';
 
-    let municipalitiesData = [];
+    let municipalitiesData = [],
+        initialCamera;   // will hold the exact initial view
 
+    // initialize map
     const map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
@@ -63,26 +64,81 @@
       maxBounds: bounds
     });
 
-    function getFeatureBounds(feature) {
-      const coords = feature.geometry.type === 'MultiPolygon'
-        ? feature.geometry.coordinates.flat(2)
-        : feature.geometry.coordinates[0];
-      return coords.reduce((b, c) => b.extend(c), new mapboxgl.LngLatBounds());
-    }
+    // record the exact initial camera once the style is fully loaded
+    map.on('load', () => {
+      initialCamera = {
+        center: map.getCenter().toArray(),  // [lng, lat]
+        zoom: map.getZoom(),
+        bearing: map.getBearing(),
+        pitch: map.getPitch()
+      };
 
-    function selectFeature(feature) {
-      // animate zoom-in over 500ms
-      const bb = getFeatureBounds(feature);
-      map.fitBounds(bb, {
-        padding: 40,
-        duration: 1000
+      // load GeoJSON features
+      fetch(geojsonURL)
+        .then(r => r.ok ? r.json() : Promise.reject(r.status))
+        .then(data => municipalitiesData = data.features)
+        .catch(err => console.error('GeoJSON load failed:', err));
+
+      // faded base layer
+      map.addSource('municipalities-full', {
+        type: 'geojson',
+        data: geojsonURL
+      });
+      map.addLayer({
+        id: 'fade-layer',
+        type: 'fill',
+        source: 'municipalities-full',
+        paint: { 'fill-color': '#888', 'fill-opacity': 0.5 },
+        layout: { visibility: 'none' }
       });
 
+      // highlight layer
+      map.addSource('highlight-town', {
+        type: 'geojson',
+        data: { type: 'FeatureCollection', features: [] }
+      });
+      map.addLayer({
+        id: 'highlight-fill',
+        type: 'fill',
+        source: 'highlight-town',
+        paint: { 'fill-color': '#FFEB3B', 'fill-opacity': 0.8 }
+      });
+      map.addLayer({
+        id: 'highlight-line',
+        type: 'line',
+        source: 'highlight-town',
+        paint: { 'line-color': '#FF9800', 'line-width': 2 }
+      });
+
+      // wire up the home button
+      document.getElementById('homeButton').onclick = clearSelection;
+
+      // click-to-select logic
+      map.on('click', vectorLayerId, e => {
+        if (!municipalitiesData.length) return;
+        const name = e.features[0].properties[tileField];
+        const match = municipalitiesData.find(f =>
+          f.properties[geojsonField]?.toLowerCase() === name.toLowerCase()
+        );
+        if (match) selectFeature(match);
+      });
+    });
+
+    // zoom in to a selected town
+    function selectFeature(feature) {
+      const bb = feature.geometry.type === 'MultiPolygon'
+        ? feature.geometry.coordinates.flat(2)
+        : feature.geometry.coordinates[0];
+      const bounds = bb.reduce(
+        (b, c) => b.extend(c),
+        new mapboxgl.LngLatBounds()
+      );
+
+      map.fitBounds(bounds, { padding: 40, duration: 1000 });
       map.setFilter('fade-layer',
         ['!=', ['get', geojsonField], feature.properties[geojsonField]]
       );
       map.setLayoutProperty('fade-layer', 'visibility', 'visible');
-
       map.getSource('highlight-town').setData({
         type: 'FeatureCollection',
         features: [feature]
@@ -94,61 +150,27 @@
       }, '*');
     }
 
+    // return to **exact** initial view
     function clearSelection() {
+      if (!initialCamera) return;
       map.setLayoutProperty('fade-layer', 'visibility', 'none');
       map.getSource('highlight-town').setData({
         type: 'FeatureCollection',
         features: []
       });
-      // animate zoom-out over 500ms
+
       map.easeTo({
-        center: defaultCenter,
-        zoom: defaultZoom,
+        center: initialCamera.center,
+        zoom: initialCamera.zoom,
+        bearing: initialCamera.bearing,
+        pitch: initialCamera.pitch,
         duration: 1000
       });
+
       window.parent.postMessage({ type: 'clear-complete' }, '*');
     }
 
-    map.on('load', () => {
-      fetch(geojsonURL)
-        .then(r => r.ok ? r.json() : Promise.reject(r.status))
-        .then(data => municipalitiesData = data.features)
-        .catch(err => console.error('GeoJSON load failed:', err));
-
-      map.addSource('municipalities-full', {
-        type: 'geojson', data: geojsonURL
-      });
-      map.addLayer({
-        id: 'fade-layer', type: 'fill', source: 'municipalities-full',
-        paint: { 'fill-color': '#888', 'fill-opacity': 0.5 },
-        layout: { visibility: 'none' }
-      });
-
-      map.addSource('highlight-town', {
-        type: 'geojson',
-        data: { type: 'FeatureCollection', features: [] }
-      });
-      map.addLayer({
-        id: 'highlight-fill', type: 'fill', source: 'highlight-town',
-        paint: { 'fill-color': '#FFEB3B', 'fill-opacity': 0.8 }
-      });
-      map.addLayer({
-        id: 'highlight-line', type: 'line', source: 'highlight-town',
-        paint: { 'line-color': '#FF9800', 'line-width': 2 }
-      });
-
-      document.getElementById('homeButton').onclick = clearSelection;
-
-      map.on('click', vectorLayerId, e => {
-        if (!municipalitiesData.length) return;
-        const name = e.features[0].properties[tileField];
-        const match = municipalitiesData.find(f =>
-          f.properties[geojsonField]?.toLowerCase() === name.toLowerCase()
-        );
-        if (match) selectFeature(match);
-      });
-    });
-
+    // respond to search or clear from parent
     window.addEventListener('message', e => {
       const msg = e.data;
       if (!municipalitiesData.length) return;
